--- a/client/src/app/notifications/notifications.page.html
+++ b/client/src/app/notifications/notifications.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Notifications
+      User Profile
     </ion-title>
   </ion-toolbar>
 </ion-header>
