--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-header>
     <ion-toolbar color="tertiary">
-      <ion-icon name="home"size="large" routerLink="/notifications"></ion-icon>
+      <ion-icon name="settings"size="large" routerLink="/notifications"></ion-icon>
       <div class="logo"><img src='../assets/logo-blue-background.png' height="40"></div>
       <ion-icon id="cond" name={{this.conditions}} size="large"></ion-icon>
       <span id="temp">{{this.temperature}}°</span>
