User Profile updated with username and Location

--- a/client/src/app/notifications/notifications.page.html
+++ b/client/src/app/notifications/notifications.page.html
@@ -12,6 +12,9 @@
       </ion-avatar>
         <ion-label>{{this.username}}</ion-label>
     </ion-item>
+    <ion-item>
+      <ion-text>{{this.location}}</ion-text>
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 
