tab5 filter fixed => no end date needed

--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -1,9 +1,10 @@
 <ion-content>
+  <ion-item-divider>
   <ion-grid fixed>
     <ion-row>
       <ion-col>
         <ion-item #S class="ion-justify-content-center select">
-          <ion-select [(ngModel)]="matchMethod" (ionChange)="setMatchMethod()" >
+          <ion-select [(ngModel)]="matchMethod" placeholder="Select a method" (ionChange)="setMatchMethod()">
             <ion-select-option value="random" selected>Random</ion-select-option>
             <ion-select-option value="colorMatch">ColorMatch</ion-select-option>
             <ion-select-option value="allNeutral">All Neutrals</ion-select-option>
@@ -13,7 +14,7 @@
       </ion-col>
       <ion-col>
         <ion-item #S class="ion-justify-content-center">
-          <ion-select [(ngModel)]="occasion" (ionChange)="setMatchMethod()" >
+          <ion-select [(ngModel)]="occasion" (ionChange)="setMatchMethod()">
             <ion-select-option value="random" selected>Random</ion-select-option>
             <ion-select-option value="casual">Casual</ion-select-option>
             <ion-select-option value="formal">Formal</ion-select-option>
@@ -24,8 +25,11 @@
         </ion-item>
       </ion-col>
     </ion-row>
-    <ion-row class="ion-align-items-center ion-justify-content-center">
+  </ion-grid>
+</ion-item-divider>
 
+  <ion-grid fixed>
+    <ion-row class="ion-align-items-center ion-justify-content-center">
       <ion-col>
         <ion-item>
           <div *ngIf="!isLoading; else elseBlock">
