--- a/client/src/app/tab5/tab5.page.html
+++ b/client/src/app/tab5/tab5.page.html
@@ -12,15 +12,30 @@
 
 
     <!-- Sort methods -->
-    <ion-item>
-      <ion-label>Least to Most Worn</ion-label>
-      <ion-radio (ionSelect)="sortCloset('least2Most')" checked></ion-radio>
-    </ion-item>
-    <ion-item>
-      <ion-label>Most to Least Worn</ion-label>
-      <ion-radio (ionSelect)="sortCloset('most2Least')"></ion-radio>
-    </ion-item>
-  </ion-radio-group>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+            <ion-label>Least Worn</ion-label>
+            <ion-radio (ionSelect)="sortCloset('least2Most')" checked></ion-radio>
+        </ion-col>
+        <ion-col>
+              <ion-label>Most Worn</ion-label>
+              <ion-radio (ionSelect)="sortCloset('most2Least')"></ion-radio>
+        </ion-col>
+      </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>$$$>$</ion-label>
+                <ion-radio (ionSelect)="sortCloset('high2Low')" checked></ion-radio>
+              </ion-col>
+              <ion-col>
+                <ion-label>$<$$$</ion-label>
+                <ion-radio (ionSelect)="sortCloset('low2High')"></ion-radio>
+              </ion-col>
+            </ion-row>
+    </ion-grid>
+</ion-radio-group>
+
   <!-- date picker title -->
   <ion-list-header>
     <ion-label>
