--- a/client/src/app/tab1/tab1.page.html
+++ b/client/src/app/tab1/tab1.page.html
@@ -1,31 +1,35 @@
 <ion-content>
-  <ion-grid fixed>
-    <ion-row>
-      <ion-col>
-        <ion-item #S class="ion-justify-content-center select">
-          <ion-select [(ngModel)]="matchMethod" (ionChange)="setMatchMethod()" >
-            <ion-select-option value="random" selected>Random</ion-select-option>
-            <ion-select-option value="colorMatch">ColorMatch</ion-select-option>
-            <ion-select-option value="allNeutral">All Neutrals</ion-select-option>
-            <ion-select-option value="monochromatic">Monochromatic</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-col>
-      <ion-col>
-        <ion-item #S class="ion-justify-content-center">
-          <ion-select [(ngModel)]="occasion" (ionChange)="setMatchMethod()" >
-            <ion-select-option value="random" selected>Random</ion-select-option>
-            <ion-select-option value="casual">Casual</ion-select-option>
-            <ion-select-option value="formal">Formal</ion-select-option>
-            <ion-select-option value="business">Business</ion-select-option>
-            <ion-select-option value="goingOut">Going Out</ion-select-option>
-            <ion-select-option value="athletic">Athletic</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row class="ion-align-items-center ion-justify-content-center">
+  <ion-item-divider>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col>
+          <ion-item #S class="ion-justify-content-center select">
+            <ion-select [(ngModel)]="matchMethod" placeholder="Select a method" (ionChange)="setMatchMethod()">
+              <ion-select-option value="random" selected>Random</ion-select-option>
+              <ion-select-option value="colorMatch">ColorMatch</ion-select-option>
+              <ion-select-option value="allNeutral">All Neutrals</ion-select-option>
+              <ion-select-option value="monochromatic">Monochromatic</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item #S class="ion-justify-content-center">
+            <ion-select [(ngModel)]="occasion" (ionChange)="setMatchMethod()">
+              <ion-select-option value="random" selected>Random</ion-select-option>
+              <ion-select-option value="casual">Casual</ion-select-option>
+              <ion-select-option value="formal">Formal</ion-select-option>
+              <ion-select-option value="business">Business</ion-select-option>
+              <ion-select-option value="goingOut">Going Out</ion-select-option>
+              <ion-select-option value="athletic">Athletic</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item-divider>
 
+  <ion-grid fixed>
+    <ion-row class="ion-align-items-center ion-justify-content-center">
       <ion-col>
         <ion-item>
           <div *ngIf="!isLoading; else elseBlock">
@@ -89,7 +93,8 @@
       </ion-col>
       <ion-col>
         <ion-item>
-          <div *ngIf="!isLoading && outfit['shoes']; else elseBlock" routerLink="/home/tabs/tab4" (click)="changeClothingItem('shoes')">
+          <div *ngIf="!isLoading && outfit['shoes']; else elseBlock" routerLink="/home/tabs/tab4"
+            (click)="changeClothingItem('shoes')">
             <ion-img [src]="outfit['shoes'].imageUrl"></ion-img>
           </div>
         </ion-item>
