--- a/client/src/app/tab1/tab1.page.scss
+++ b/client/src/app/tab1/tab1.page.scss
@@ -8,6 +8,15 @@ ion-grid {
 
   ion-row {
     height: 33.33% !important;
+    // border: thin solid black !important;
   }
 
+  ion-col {
+    text-align: center;
+  }
+
+//   .col{
+// background: gray;
+// border: think solid black;
+// }
 }
