options modal resized

--- a/client/src/app/modals/item-options-modal/item-options-modal.component.scss
+++ b/client/src/app/modals/item-options-modal/item-options-modal.component.scss
@@ -1,3 +1,21 @@
 #closeButton {
   float: right;
 }
+
+// .my-custom-modal-css .modal-wrapper {
+//   height: 20%;
+//   top: 80%;
+//   position: absolute; 
+//   display: block;  
+// }
+
+.sc-ion-modal-ios-h {
+  height: 50%;
+  top: 0;
+  position: absolute; 
+  display: block;  
+}
+
+.hov {
+  cursor:pointer
+}
