--- a/client/src/app/modals/item-options-modal/item-options-modal.component.html
+++ b/client/src/app/modals/item-options-modal/item-options-modal.component.html
@@ -1,19 +1,18 @@
 <ion-content class="main-view">
   <!-- <div class="overlay" (click)="dismiss()"></div> -->
   <div class="modal_content">
-    <ion-list id="options-list">
-        <ion-button id="closeButton" slots="end" ion-button icon-end (click)="close()">
+      <ion-item-divider>
+        <ion-button id="closeButton" slot="end" ion-button icon-end (click)="close()">
           <ion-icon name="close-circle"></ion-icon>
         </ion-button>
-      <ion-item-divider>
       </ion-item-divider>
 
-      <ion-button ion-item expand="block" (click)="changeSelectedItem(); close()" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
-      <ion-button ion-item expand="block" routerLink="/home/tabs/tab3" (click)="add(); close()">Add to Sell List</ion-button>
-      <ion-button ion-item expand="block" routerLink="/home/tabs/tab4/update-item" (click)="close()">Update Item</ion-button>
-      <ion-button ion-item expand="block" (click)="chooseItem(); close()" routerLink="/home/tabs/tab5">See Stats</ion-button>
-      <ion-button ion-item expand="block" (click)="removeFromCloset()">Remove from closet</ion-button>
-
+    <ion-list id="options-list">
+      <ion-button class="hov" ion-item expand="block" (click)="changeSelectedItem(); close()" routerLink="/home/tabs/tab1">Add to OOTD</ion-button>
+      <ion-button class="hov" ion-item expand="block" routerLink="/home/tabs/tab3" (click)="add(); close()">Add to Sell List</ion-button>
+      <ion-button class="hov" ion-item expand="block" routerLink="/home/tabs/tab4/update-item" (click)="close()">Update Item</ion-button>
+      <ion-button class="hov" ion-item expand="block" (click)="chooseItem(); close()" routerLink="/home/tabs/tab5">See Stats</ion-button>
+      <ion-button class="hov" ion-item expand="block" (click)="removeFromCloset()">Remove from closet</ion-button>
     </ion-list>
   </div>
 </ion-content>
