--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -9,3 +9,11 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+.my-custom-modal-css .modal-wrapper {
+  height: 35%;
+  position: absolute; 
+  display: block;
+  border-radius: 25px;  
+  background: transparent; 
+}
