--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
 
   <ion-header>
-    <ion-toolbar color="tertiary">
+    <ion-toolbar class="vertical-align"color="tertiary">
       <ion-icon name="settings"size="large" routerLink="/notifications"></ion-icon>
       <div class="logo"><img src='../assets/logo-blue-background.png' height="40" (click)="print()"></div>
       <ion-icon id="cond" name={{this.conditions}} size="large"></ion-icon>
