--- a/client/src/app/tabs/tabs.page.scss
+++ b/client/src/app/tabs/tabs.page.scss
@@ -1,4 +1,7 @@
-#temp { float:right }
+#temp { 
+  float:right;
+  top: 15%;
+}
 #cond { float:right }
 
 .ion-page {
@@ -9,16 +12,16 @@
   margin-left: auto;
   margin-right: auto;
   position: absolute;
-  top: 10%;
+  top: 5%;
   transform: translateX(450%);
 }
 
-.my-custom-modal-css .modal-wrapper {
-  height: 50% !important;
-  top: 0;
-  position: absolute; 
-  display: block;  
+.vertical-align {    
+    display: flex !important;
+    align-content: center !important;
+    align-items: center !important;
 }
+
 
 // @media not all and (min-height: 600px) and (min-width: 768px) {
 //   ion-modal ion-backdrop {
