--- a/client/src/app/tab3/tab3.page.scss
+++ b/client/src/app/tab3/tab3.page.scss
@@ -37,6 +37,19 @@
 //   border: thin solid black;
 // }
 
+// #banner {
+//     height: 100px;
+//     width: 960px;
+//     padding-bottom: 10px;
+// }
+
+#banner img {
+    border: none;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 5px;
+}
+
 .mid{
   vertical-align: middle;
 }
