added posted-list page

--- a/client/src/app/tab3/tab3.page.html
+++ b/client/src/app/tab3/tab3.page.html
@@ -3,13 +3,10 @@
   <div class="title">
     <h1 style="text-align:center" (click)="print()">Sell List for</h1>
   </div>
-  <!-- <div id="eBayLogo" text-align="center">
-  <img src='../../assets/1280px-EBay_logo.svg.png' height="30" (click)="print()">
-  </div> -->
-
+  
 <div id="banner">
     <img
-      src='../../assets/1280px-EBay_logo.svg.png' height="30" (click)="print()"/>
+      src='../../assets/1280px-EBay_logo.svg.png' height="30" routerLink="/posted-list"/>
   </div>
 
   <ion-buttons class="center">
