--- a/client/src/app/tab3/tab3.page.html
+++ b/client/src/app/tab3/tab3.page.html
@@ -6,7 +6,7 @@
   
 <div id="banner">
     <img
-      src='../../assets/1280px-EBay_logo.svg.png' height="30" routerLink="/posted-list"/>
+      src='../../assets/1280px-EBay_logo.svg.png' height="30" routerLink="/home/tabs/tab3/posted-list"/>
   </div>
 
   <ion-buttons class="center">
