--- a/client/src/app/tab1/tab1.page.scss
+++ b/client/src/app/tab1/tab1.page.scss
@@ -15,6 +15,11 @@ ion-grid {
     text-align: center;
   }
 
+  .images{
+    max-height: 33%;
+    // height: 33%;
+    // max-width: 33%;
+  }
 //   .col{
 // background: gray;
 // border: think solid black;
