--- a/client/src/app/tab3/tab3.page.html
+++ b/client/src/app/tab3/tab3.page.html
@@ -3,7 +3,7 @@
   <h1 style="text-align:center" (click)="print()">Sell List for eBay</h1>
     <ion-button (click)="sellAll()">Sell All</ion-button>
     <ion-button (click)="reset()">Keep All</ion-button>
-    <ion-button routerLink="/sell-on-ebay" (click)="sell()">Sell Selected</ion-button>
+    <ion-button (click)="sell()">Sell Selected</ion-button>
 
 
 
