styling done: modal updated, toolbar with white icons and logo => grey

--- a/client/src/app/tab1/tab1.page.scss
+++ b/client/src/app/tab1/tab1.page.scss
@@ -16,7 +16,7 @@ ion-grid {
   }
 
   .images{
-    max-height: 33%;
+    max-height: 33% !important;
     // height: 33%;
     // max-width: 33%;
   }
