--- a/client/src/app/tab3/posted-list/posted-list.page.html
+++ b/client/src/app/tab3/posted-list/posted-list.page.html
@@ -33,8 +33,8 @@
           </ion-col>
         </ion-row>
           </ion-item>
-            <ion-item-options>
-              <button primary (click)="removeItem(item)">
+            <ion-item-options class="delete">
+              <button class="delete" (click)="removeItem(item)">
                 <ion-icon name="trash"></ion-icon> Delete
               </button>
             </ion-item-options>
