--- a/client/src/app/tab3/posted-list/posted-list.page.scss
+++ b/client/src/app/tab3/posted-list/posted-list.page.scss
@@ -1,4 +1,15 @@
 .thumb{
-  height: 80px;
-  width: 120px;
+  height: 90px;
+  width: 130px;
+}
+
+.list-ios {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  display: grid;
+  align-items: center;
+  grid-template-rows: 62px 62px 62px;
+  line-height: 1
 }
