nav bar updated to include mist weather, notifications page nav bar updated too, still working on postedList localStorage removal

--- a/client/src/app/notifications/notifications.page.html
+++ b/client/src/app/notifications/notifications.page.html
@@ -1,10 +1,19 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-icon name="settings" size="large" (click)="print()" routerLink="/home"></ion-icon>
-    <div class="logo"><img src='../assets/logo-blue-background.png' height="40"></div>
-    <ion-icon id="cond" name={{this.conditions}} size="large"></ion-icon>
-    <span id="temp">{{this.temperature}}°</span>
+    <ion-icon class="customIcons" name="settings" size="large" (click)="print()" routerLink="/home"></ion-icon>
+      <div class="logo"><img src='../assets/OptiCloset-light-grey-logo.png' height="40" (click)="print()"></div>
+    <!-- <ion-icon class="customIcons" id="cond" name={{this.conditions}} size="large"></ion-icon> -->
+    <!-- <span class="customIcons" id="temp">{{this.temperature}}°</span> -->
+      <div *ngIf="this.conditions; then thenBlock else elseBlock"></div>
+      <ng-template #thenBlock>
+        <ion-icon class="customIcons" id="cond" name={{this.conditions}} size="large"></ion-icon>
+      </ng-template>
+      <ng-template #elseBlock>
+        <ion-icon id="cond" class="customIcons" src="../../assets/fog_mist_icon.svg" size="large"></ion-icon>
+      </ng-template>
+      <span class="customIcons" id="temp">{{this.temperature}}°</span>
   </ion-toolbar>
+
   <ion-toolbar>
     <ion-item>
       <ion-avatar slot="start">
