--- a/client/src/app/tab3/posted-list/posted-list.page.scss
+++ b/client/src/app/tab3/posted-list/posted-list.page.scss
@@ -10,6 +10,6 @@
   margin-bottom: 0px;
   display: grid;
   align-items: center;
-  grid-template-rows: 62px 62px 62px;
-  line-height: 1
+  grid-template-rows: 62px 62px;
+  // line-height: 1
 }
