--- a/client/src/app/tab3/posted-list/posted-list.page.html
+++ b/client/src/app/tab3/posted-list/posted-list.page.html
@@ -23,9 +23,9 @@
               <ion-item>
                 <ion-label>Title: {{item.title}}</ion-label>
               </ion-item>
-              <ion-item>
+              <!-- <ion-item>
                 <ion-label>Description: {{item.description}}</ion-label>
-              </ion-item>
+              </ion-item> -->
               <ion-item>
                 <ion-label>Price: {{item.pricePosted}}</ion-label>
               </ion-item>
