--- a/client/src/app/tab3/tab3.page.html
+++ b/client/src/app/tab3/tab3.page.html
@@ -2,7 +2,7 @@
 <ion-content>
   <!-- <h1 style="text-align:center" (click)="print()">Sell List for eBay</h1> -->
   <div class="title">
-    <h1 style="text-align:center" (click)="print()">Sell List for</h1>
+    <h1 style="text-align:center">Sell List for</h1>
   </div>
   
 <div id="banner">
