styled photo tips and floated camera buttons

--- a/client/src/app/tab2/tab2.page.html
+++ b/client/src/app/tab2/tab2.page.html
@@ -76,10 +76,11 @@
           Wipe off your phone’s camera lens with a soft cloth and make sure your photo is in focus
         </li>
       </ul>
-    </ion-item>
+    </ion-item> 
+    <br><br><br>
   <!-- </ion-list> -->
   <!-- <img [src]="uploadedImage" *ngIf="uploadedImage"> -->
-  <ion-fab vertical="bottom">
+  <ion-fab vertical="bottom" slot="fixed">
     <ion-row>
       <ion-col>
         <ion-fab-button color="medium" class='button1' (click)="takePicture()">
