--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -58,3 +58,24 @@ ion-tab-button#tab-button-tab5 {
 .delete{
   background-color: #d11a1a;
 }
+
+.test{
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding-right: 6px;
+}
+
+.tab5Labs{
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
+
+
+// ion-radio {
+//   // margin: 0;
+//   // padding-right: 10px;
+//   // padding-left: 10px;
+// }
